--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h1>WELCOME TO CXP</h1>
         <p>Your gateway to monitor Containers with Prometheus</p>
         <p><a href="https://github.com/Shayan-Ghani/Container-Exporter/blob/master/extra/metrics.txt" class="styled-link">Smaple Metrics</a></p> <!-- Link with style -->
-        <p><a href="/demo.html" class="styled-link">Demo</a></p>
+        <p><a href="demo.html" class="styled-link">Demo</a></p>
     </div>
 </body>
 </html>
