--- a/index.html
+++ b/index.html
@@ -1,58 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome to CXP</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            background-color: #FAF5E4; /* Beige background */
-            font-family: 'Roboto', sans-serif;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .welcome-container {
-            text-align: center;
-            padding: 4rem;
-            background-color: #ffffff; /* White box for content */
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); /* Light shadow for depth */
-            border-radius: 10px; /* Smooth corners */
-        }
-        h1 {
-            color: #E44D26; /* Prometheus red */
-            font-weight: 700;
-            font-size: 3em;
-            margin: 0;
-            margin-bottom: 2.6rem;
-            padding-bottom: 10px; /* Some space under the heading */
-        }
-        p {
-            color: #333;
-            font-size: 1.2em;
-        }
-        .styled-link {
-            color: #E44D26; /* Prometheus red */
-            text-decoration: none; /* Remove underline */
-            font-weight: 700; /* Make it bold */
-            transition: color 0.3s; /* Smooth transition */
-        }
-        .styled-link:hover {
-            color: #cc3b20; /* Darker shade on hover */
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Container Exporter Demo</title>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #0e0e0e;
+      color: #f0f0f0;
+      font-family: sans-serif;
+      margin: 0;
+      height: 100vh;
+      justify-content: center;
+    }
+    img {
+      max-width: 90%;
+      border: 3px solid #444;
+      border-radius: 8px;
+    }
+    h1 {
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
-    <div class="welcome-container">
-        <h1>WELCOME TO CXP</h1>
-        <p>Your gateway to monitor Containers with Prometheus</p>
-        <p><a href="https://github.com/Shayan-Ghani/Container-Exporter/blob/master/extra/metrics.txt" class="styled-link">Smaple Metrics</a></p> <!-- Link with style -->
-        <p><a href="https://github.com/Shayan-Ghani/Container-Exporter/blob/gh-pages/demo.html" class="styled-link">Demo</a></p>
-    </div>
+  <h1>Container Exporter GIF Demo</h1>
+  <img src="demo.gif" alt="Container Exporter Demo">
 </body>
 </html>
