--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 </head>
 <body>
   <h1>Container Exporter GIF Demo</h1>
-  <img src="demo.gif" alt="Container Exporter Demo">
+  <img src="CXP-DEMO.gif" alt="Container Exporter Demo">
 </body>
 </html>
