added rules and updated doc

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
         <p>Your reliable Docker container exporter for Prometheus monitoring in production-grade systems.</p>
         <div class="links">
             <a href="./metrics.html"
-                class="link-btn"> View Sample Metrics</a>
+                class="link-btn"> Sample Metrics</a>
+            <a href="./rules.html"
+                class="link-btn"> Prometheus Rules</a>
             <a href="./doc.html" class="link-btn">Documentation</a>
         </div>
         <div class="footer">
