--- a/doc.html
+++ b/doc.html
@@ -18,6 +18,16 @@
             box-sizing: border-box;
         }
 
+        :root {
+            --brand-main: #FF5722;
+            /* for buttons & links */
+            --brand-heading: #FFA07A;
+            /* for h1/h2 */
+            --brand-accent: #FFAB91;
+            /* for h3, hover states */
+        }
+
+
         body {
             background-color: #0d0d0d;
             font-family: "Source Code Pro", monospace;
@@ -65,16 +75,18 @@
             box-shadow: 0 0 50px rgba(255, 69, 0, 0.12);
             display: flex;
             flex-direction: column;
-            gap: 1.5rem;
+            gap: 1.8rem;
+            line-height: 2.5rem;
+
         }
 
         h1 {
-            color: #FF5722;
+            color: var(--brand-main);
             font-size: 2.6rem;
         }
 
         h2 {
-            color: #FF5722;
+            color: var(--brand-main);
             font-size: 1.8rem;
         }
 
@@ -84,13 +96,13 @@
         }
 
         p {
-            line-height: 1.7;
+            line-height: 2.5rem;
             color: #ccc;
         }
 
         ol,
         ul {
-            padding-left: 1.5rem;
+            padding-left: 2.5rem;
             display: flex;
             flex-direction: column;
             gap: 0.5rem;
@@ -124,7 +136,7 @@
         }
 
         a {
-            color: #FF5722;
+            color: var(--brand-main);
             text-decoration: none;
         }
 
@@ -147,8 +159,9 @@
         .section {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            gap: 2rem;
         }
+
 
         .badges {
             display: flex;
@@ -156,6 +169,23 @@
             gap: 0.5rem;
             margin-top: 0.5rem;
         }
+
+
+        h1 {
+            color: var(--brand-heading);
+            font-size: 2.6rem;
+        }
+
+        h2 {
+            color: var(--brand-heading);
+            font-size: 1.8rem;
+        }
+
+        h3 {
+            color: var(--brand-accent);
+            font-size: 1.4rem;
+        }
+
     </style>
 </head>
 
@@ -165,27 +195,35 @@
     <div class="container">
         <h1>🚀 Container Exporter (CXP)</h1>
         <p>A resource-friendly, highly efficient Prometheus exporter for monitoring Docker containers' Memory, CPU,
-          Disk, and Network I/O usage — with uptime tracking.</p>
-          <p>when a container is not running due to whatever reason <code>cxp</code> removes all its stats metrics (cpu, memory, etc.) but keeps its status (running/not-running) to facilitate alerting in case something goes wrong with that contaier.</p>
+            Disk, and Network I/O usage — with uptime tracking.</p>
+        <p>when a container is not running due to whatever reason <code>cxp</code> removes all its stats metrics (cpu,
+            memory, etc.)
+            <code>(if CONTAINER_EXPORTER_CLEAR_METRICS=True otherwise they are set to 0 to retain time series data.)</code>
+            but keeps its status ( running/not-running/(restarting/unhealthy) ) to facilitate alerting in case something
+            goes wrong with that contaier.
+        </p>
 
-          <p>Check out a sample of the metrics output <a href="./metrics.html">here</a> to see how it works.</p>
+        <p>Check out a sample of the metrics output <a href="./metrics.html">here</a> to see how it works.</p>
         <div class="section">
             <h2>📚 Table of Contents</h2>
             <ol>
                 <li><a href="#dev-stack">DEV STACK</a></li>
                 <li><a href="#demo">DEMO</a></li>
                 <li><a href="#guide">Deployment Guide</a></li>
+                <li><a href="#settings">Config and Settings</a></li>
                 <li><a href="#grafana">Grafana Dashboards</a></li>
-                <li><a href="#todo">To-Do</a></li>
-                <li><a href="#contributions">Contributions</a></li>
+                <li><a href="#alerting">Alerting</a></li>
             </ol>
         </div>
 
         <div class="section" id="dev-stack">
             <h2>🛠️ DEV STACK</h2>
             <div class="badges">
+
                 <img class="badge"
                     src="https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54">
+                <img class="badge"
+                    src="https://img.shields.io/badge/fastapi-%23000.svg?style=for-the-badge&logo=fastapi&logoColor=ffdd54">
                 <img class="badge"
                     src="https://img.shields.io/badge/docker-3670A0?style=for-the-badge&logo=docker&logoColor=ffff">
                 <img class="badge"
@@ -200,6 +238,33 @@
             <img src="https://shayan-ghani.github.io/Container-Exporter/CXP-DEMO.gif" alt="CXP Demo GIF">
         </div>
 
+        <div class="section" id="settings">
+            <h2>Config and Settings </h2>
+            <div class="config">
+                <h3>Uvicorn</h3>
+                <p>the following settings can be set via exporting environment variables and are applied to <code>start.sh</code> entrypoint. </p>
+                <ul>
+                    <li>HOST (Default: 0.0.0.0)</li>
+                    <li>PORT (Default: 8000)</li>
+                    <li>WORKERS: Prometheus Multi-Processesing needed, not Implemented yet as of version [1.3.0] (Default : 1)</li>
+                    <li>LOG_LEVEL (Default : warning) </li>
+                </ul>
+            </div>
+            <h3>App Settings</h3>
+            <p>the following settings can be set via exporting environment variables or a <code>.env</code> file. </p>
+            <ul>
+                <li><code>CONTAINER_EXPORTER_CLEAR_METRICS</code> (Default: True)</li>
+                <p>when set to False the metrics for container stats will not be fully cleared and set to zero to retain the time series data recorded for that container.
+                    note that only <b>Gauge Metrics</b>  can be set to zero, so <code>network</code> and <code>disk io</code> settings will be fully cleared either way.
+                </p>
+            </ul>
+            <div class="config">
+                
+            </div>
+
+
+        </div>
+
         <div class="section" id="guide">
             <h2>📋 Deployment Guide</h2>
 
@@ -209,6 +274,36 @@
                 <li>Docker & Docker Compose installed (optional)</li>
                 <li>Git and Python ≥ 3.10 available</li>
             </ul>
+
+            <h3>⚙️ Deploy with GitHub Actions</h3>
+            <ul>
+                <li>Fork the repository.</li>
+                <li>Go to the forked repository and switch to the Actions tab.</li>
+                <li>Click the <code>I understand my workflows, go ahead and enable them</code> button.</li>
+                <li>Now you have access to all of the workflows; however, make sure you change the secrets listed below
+                    accordingly:
+                    <ul>
+                        <li><code>secrets.DOCKER_TOKEN</code>: the personal access token for Docker Hub of your (or your
+                            organization’s) account.</li>
+                        <li><code>secrets.GHCR_TOKEN</code>: GitHub classic access token with
+                            <code>packages:read-write</code> permissions, or simply use
+                            <code>${{ github.token }}</code>.
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+            <h3>How Workflows Work</h3>
+            <ul>
+                <li>On push to <code>master</code>, the project will be built, deployed, and released. Since deploying
+                    to your servers requires runner configuration, it must be triggered manually; you can modify its
+                    behavior in the <code>cd.yml</code> workflow.</li>
+                <li>On push to any branch except <code>master</code>, code will be built and health-checked.</li>
+                <li>On pull request, the project will be health-checked and built.</li>
+            </ul>
+
+            <bold>Double check the required variables and secrets to prevent any unexpected failures.</bold>
+
 
             <h3>With Docker Compose</h3>
             <pre>git clone https://github.com/Shayan-Ghani/Container-exporter.git
@@ -236,22 +331,11 @@ pip install -r requirements.txt
                     to auto-replace datasource UIDs.
                 </p>
             </div>
-
-
-            <div class="section" id="todo">
-                <h2>📌 To-Do</h2>
-                <ul>
-                    <li>✅ Disk I/O metrics</li>
-                    <li>✅ Network I/O metrics</li>
-                    <li>✅ Clean metrics of dead containers</li>
-                    <li>🚧 Publish Grafana dashboards</li>
-                    <li>🚧 Build a static website</li>
-                </ul>
-            </div>
-
-            <div class="section" id="contributions">
-                <h2>🤝 Contributions</h2>
-                <p>Open for pull requests and issues. Help improve CXP!</p>
+            <div class="section" id="alerting">
+                <h2>Alerting Rules</h2>
+                <p>
+                    A page of sample Prometheus rules can be accessed <a href="./rules.html">here</a> . setting alerts on <code>cxp_container_status</code> is one of the main points users prefer <code>CXP</code> over<code>cAdvisor.</code> 
+                </p>
             </div>
 
             <div class="footer">
